changed headers in readme